envoy-dynamic/envoy/lds.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 80
  filter_chains:
  - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  headers:
                    - name: "X-node"
                      exact_match: "6554bc97f-zphs7"
                  prefix: "/"
                route:
                  cluster: helloworld-6554bc97f-zphs7
              - match:
                  headers:
                    - name: "X-node"
                      exact_match: "6554bc97f-96rk6"
                  prefix: "/"
                route:
                  cluster: helloworld-6554bc97f-96rk6
              - match:
                  prefix: "/"
                route:
                  cluster: helloworld
